# pipelinewatch

./: .env.schema  .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  config.py  docker-compose.yml  gitlab-ci.yml  internal_requirements.txt  pyproject.toml  worker_k8s_job_watch.py
.github/workflows/: build-and-publish.yml  ci.yaml  run-tests.yml  trigger-jenkins.yml
models/: folder.py  minio_client.py
pipelinewatch/: on_data_delete_v2.py  on_data_transfer_v2.py  pod_event_listner.py  stream_listner.py  stream_watcher.py
services/file_meta/: file_data_mgr.py  vr_folders_mgr.py
tests/: prepare_test.py  pytest.ini
tests/pipelinewatch/: test_stream_watcher.py
utils/: archive.py  file_opertion_status.py  lineage_operations.py  meta_data_operations.py
