[tool.poetry]
name = "pipelinewatch"
version = "0.1.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.7"
pilot-platform-common = "0.0.28"
python-json-logger = "2.0.2"
kubernetes = "11.0.0"
requests = "2.24.0"
pydantic = "1.8.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pytest-mock = "3.7.0"
pytest-cov = "3.0.0"
pytest-httpserver = "1.0.2"
Faker = "13.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
